v10/fixtures/ast/errors/array_destructure_mismatch/source.able
arr := [1, 2, 3]
[a, b] := arr
